<resources>
    <string name="app_name">IScan</string>
    <string name="action_settings">Settings</string>
    <string name="flash">Flash</string>
    <string name="done">Done</string>
    <string name="title_activity_view_edit">ViewEditActivity</string>
    <string name="next_page">&gt;</string>
    <string name="previous_page">&lt;</string>
    <string name="delete">Delete</string>
    <string name="please_enter_a_name_for_the_pdf">Please enter a name for the PDF</string>
    <string name="pdf">.pdf</string>
    <string name="name">Name</string>
    <string name="enter_name_for_pdf">Enter name for pdf</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="thumbnail">thumbnail</string>
    <string name="share">Share</string>
    <string name="view">View</string>
    <string name="a_draggable_corner">A draggable corner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="scanning">Scanning</string>
    <string name="scan">Next</string>
    <string name="cantCrop">Can\'t crop the image, change the points</string>
    <string name="ok">OK</string>
    <string name="loading">Loading</string>
    <string name="applying_filter">Applying filter</string>
    <string name="low_memory">Low Memory</string>
    <string name="low_memory_message">Your phone is low on memory, you may feel some lags while editing images.</string>
    <string name="more">See more &#8230;</string>
    <string name="finish_skip">Finish / Skip</string>
    <string name="title_activity_p_d_f_view">IScan PDF Viewer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pdfmime">application/pdf</string>
    <string name="title_activity_import">ImportActivity</string>
    <string name="file_mech_message">This new version of "IScan the Indian Scanner App" uses a different mechanism to store your PDFs, which improves file security, as well as allows you to use your scans with File pickers easily, which is suitable for uploading your files through Google Forms and for other tasks. This new mechanism is implemented due to security concerns raised by Google, and now, this app importing all your older scans to adapt to the new mechanism. This is just a one time process, and won\'t take long.</string>
</resources>
