<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/pdfThumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/thumbnail"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pdfName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5pt"
            android:paddingEnd="5pt"
            android:text="@string/enter_name_for_pdf"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/view"
                app:srcCompat="@android:drawable/ic_menu_view" />

            <ImageButton
                android:id="@+id/share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/share"
                app:srcCompat="@android:drawable/ic_menu_share" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>